--- a/k8s/charts/grafana/values.yaml
+++ b/k8s/charts/grafana/values.yaml
@@ -101,7 +101,7 @@ grafana:
   # Grafana.ini configuration
   grafana.ini:
     server:
-      root_url: "%(protocol)s://%(domain)s:%(http_port)s/grafana/"
+      root_url: "%(protocol)s://%(domain)s:%(http_port)s/"
       serve_from_sub_path: false
     auth:
       disable_login_form: false
@@ -110,6 +110,7 @@ grafana:
     security:
       admin_user: admin
       allow_embedding: true
+      cookie_samesite: lax
     users:
       allow_sign_up: false
     log:
