--- a/k8s/apps/harbor.yaml
+++ b/k8s/apps/harbor.yaml
@@ -1,10 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: harbor
+  name: infra-harbor
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
+  labels:
+    app.kubernetes.io/component: registry
+    app.kubernetes.io/part-of: spring-k8s-gitops
 spec:
   project: default
   source:
@@ -12,11 +15,12 @@ spec:
     targetRevision: HEAD
     path: k8s/charts/harbor
     helm:
+      releaseName: container-registry
       valueFiles:
         - values.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: harbor
+    namespace: registry
   syncPolicy:
     automated:
       prune: true
