--- a/k8s/charts/spring-api/values.yaml
+++ b/k8s/charts/spring-api/values.yaml
@@ -3,8 +3,8 @@
 replicaCount: 1
 
 image:
-  repository: spring-api
-  tag: latest
+  repository: blog-api
+  tag: "latest"
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
