chore(deploy): update image tags to 7aea773-20260118173948
- blog-api: 7aea773-20260118173948
- blog-frontend: 7aea773-20260118173948

[skip ci]

--- a/k8s/charts/spring-api/values.yaml
+++ b/k8s/charts/spring-api/values.yaml
@@ -3,8 +3,8 @@
 replicaCount: 1
 
 image:
-  repository: blog-api
-  tag: "366a09a-20260118172401"
+  repository: harbor.registry/library/blog-api
+  tag: "7aea773-20260118173948"
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
