--- a/k8s/charts/frontend-ui/templates/configmap.yaml
+++ b/k8s/charts/frontend-ui/templates/configmap.yaml
@@ -24,7 +24,7 @@ data:
 
         # API proxy (adjust the upstream as needed)
         location /api/ {
-            proxy_pass http://spring-api:8080/;
+            proxy_pass http://blog-api-spring-api:8080/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
