--- a/apps/spring-api/src/main/resources/application.yml
+++ b/apps/spring-api/src/main/resources/application.yml
@@ -40,3 +40,12 @@ springdoc:
     path: /swagger-ui.html
     operations-sorter: alpha
     tags-sorter: alpha
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
+  endpoint:
+    health:
+      show-details: always
