--- a/k8s/charts/spring-api/templates/deployment.yaml
+++ b/k8s/charts/spring-api/templates/deployment.yaml
@@ -8,6 +8,11 @@ spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       {{- include "spring-api.selectorLabels" . | nindent 6 }}
@@ -100,6 +105,10 @@ spec:
                   key: JWT_SECRET
             - name: JWT_EXPIRATION
               value: {{ .Values.app.jwt.expiration | quote }}
+          {{- with .Values.startupProbe }}
+          startupProbe:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- with .Values.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
