--- a/k8s/charts/frontend-ui/templates/deployment.yaml
+++ b/k8s/charts/frontend-ui/templates/deployment.yaml
@@ -8,6 +8,11 @@ spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       {{- include "frontend-ui.selectorLabels" . | nindent 6 }}
