--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -43,8 +43,7 @@ services:
       context: ./frontend-ui
       dockerfile: Dockerfile
       args:
-        - VITE_API_URL=http://localhost:8080/api/articles
-        - VITE_AUTH_URL=http://localhost:8080/api/auth
+        - VITE_API_URL=/api
     container_name: frontend-ui-app
     depends_on:
       - backend
