--- a/apps/frontend-ui/nginx.conf
+++ b/apps/frontend-ui/nginx.conf
@@ -1,14 +1,24 @@
 server {
     listen 80;
     server_name localhost;
+    root /usr/share/nginx/html;
+    index index.html index.htm;
 
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
 
-    # Optional: Enable gzip compression
+    # API proxy to backend
+    location /api/ {
+        proxy_pass http://backend:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Enable gzip compression
     gzip on;
     gzip_vary on;
     gzip_min_length 10240;
