--- a/infra/kind/kind-config.yaml
+++ b/infra/kind/kind-config.yaml
@@ -9,33 +9,13 @@ nodes:
           kubeletExtraArgs:
             node-labels: "ingress-ready=true"
     extraPortMappings:
-      # Ingress HTTP
+      # Ingress HTTP - All services accessible via Ingress
       - containerPort: 80
         hostPort: 80
         protocol: TCP
       # Ingress HTTPS
       - containerPort: 443
         hostPort: 443
-        protocol: TCP
-      # ArgoCD
-      - containerPort: 30080
-        hostPort: 30080
-        protocol: TCP
-      # Harbor
-      - containerPort: 30002
-        hostPort: 30002
-        protocol: TCP
-      # Prometheus
-      - containerPort: 30090
-        hostPort: 30090
-        protocol: TCP
-      # Grafana
-      - containerPort: 30030
-        hostPort: 30030
-        protocol: TCP
-      # Alertmanager
-      - containerPort: 30093
-        hostPort: 30093
         protocol: TCP
   - role: worker
   - role: worker
