--- a/k8s/argocd/values.yaml
+++ b/k8s/argocd/values.yaml
@@ -13,11 +13,22 @@ argo-cd:
 
     # Service configuration
     service:
-      type: NodePort
-      nodePortHttp: 30080
-      nodePortHttps: 30443
+      type: ClusterIP
       servicePortHttp: 80
       servicePortHttps: 443
+
+    # Ingress configuration
+    ingress:
+      enabled: true
+      ingressClassName: nginx
+      hosts:
+        - argocd.local
+      paths:
+        - /
+      pathType: Prefix
+      annotations:
+        nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+        nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 
   # Controller configuration
   controller:
