--- a/k8s/argocd/values.yaml
+++ b/k8s/argocd/values.yaml
@@ -21,10 +21,8 @@ argo-cd:
     ingress:
       enabled: true
       ingressClassName: nginx
-      hosts:
-        - argocd.local
-      paths:
-        - /
+      hostname: argocd.local
+      path: /
       pathType: Prefix
       annotations:
         nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
