--- a/infra/kind/kind-config.yaml
+++ b/infra/kind/kind-config.yaml
@@ -1,5 +1,15 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
+# Configure containerd to use harbor.local as insecure registry
+containerdConfigPatches:
+  - |-
+    [plugins."io.containerd.grpc.v1.cri".registry]
+      [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
+        [plugins."io.containerd.grpc.v1.cri".registry.mirrors."harbor.local"]
+          endpoint = ["http://harbor.local"]
+      [plugins."io.containerd.grpc.v1.cri".registry.configs]
+        [plugins."io.containerd.grpc.v1.cri".registry.configs."harbor.local".tls]
+          insecure_skip_verify = true
 nodes:
   - role: control-plane
     kubeadmConfigPatches:
