chore(deploy): update image tags to a6c4335-20260119180108
- blog-api: a6c4335-20260119180108
- blog-frontend: a6c4335-20260119180108

[skip ci]

--- a/k8s/charts/spring-api/values.yaml
+++ b/k8s/charts/spring-api/values.yaml
@@ -4,8 +4,8 @@
 replicaCount: 3
 
 image:
-  repository: harbor.local/library/blog-api
-  tag: "90e4780-20260119174257"
+  repository: harbor.registry/library/blog-api
+  tag: "a6c4335-20260119180108"
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
