--- a/k8s/apps/frontend-ui.yaml
+++ b/k8s/apps/frontend-ui.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: app-blog-frontend
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
   finalizers:
     - resources-finalizer.argocd.argoproj.io
   labels:
