--- a/k8s/charts/spring-api/values.yaml
+++ b/k8s/charts/spring-api/values.yaml
@@ -4,9 +4,9 @@
 replicaCount: 3
 
 image:
-  repository: harbor.registry/library/blog-api
-  tag: "cbf938e-20260119182744"
-  pullPolicy: IfNotPresent
+  repository: blog-api
+  tag: "dev"
+  pullPolicy: Never
 
 imagePullSecrets: []
 nameOverride: ""
