chore(deploy): update image tags to 5c0b570-20260119185210
- blog-api: 5c0b570-20260119185210
- blog-frontend: 5c0b570-20260119185210

[skip ci]

--- a/k8s/charts/frontend-ui/values.yaml
+++ b/k8s/charts/frontend-ui/values.yaml
@@ -5,7 +5,7 @@ replicaCount: 2
 
 image:
   repository: blog-frontend
-  tag: "dev"
+  tag: "5c0b570-20260119185210"
   pullPolicy: Never
 
 imagePullSecrets: []
